Frankbelford/uatv1ba/force-app/main/default/objects/sirenum_Analysis__c/sirenum_Analysis__c.object-meta.xml
<CustomObject>
    <label>Analysis</label>
    <nameField>
        <displayFormat>AN-{00000000}</displayFormat>
        <label>Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>