Frankbelford/uatv1ba/force-app/main/default/objects/sirenum_Analysis__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>