Frankbelford/uatv1ba/force-app/main/default/objects/sirenum_Analysis__c/fields/Shifts__c.field-meta.xml
<CustomField>
    <fullName>Shifts__c</fullName>
    <label>Shifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>