Frankbelford/uatv1ba/force-app/main/default/objects/sirenum_Analysis__c/fields/Workers__c.field-meta.xml
<CustomField>
    <fullName>Workers__c</fullName>
    <label>Workers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>